--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@ p {
   display: block;
 }
 
+.name {
+  font-size: 60px;
+}
+
 .about-paragraphs {
   margin: 30px 0;
 }
@@ -79,7 +83,7 @@ p {
   display: flex;
   justify-content: center;
   color: var(--primary-color);
-  font-size: 28px;
+  font-size: 20px;
   text-decoration: none;
 }
 
